--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@auth/prisma-adapter": "^2.9.1",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@uploadthing/react": "^7.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0"
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.0",
+    "uploadthing": "^7.7.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
